--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bishu Portfolio</title">
+    <title>Developer Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h2><span class="orange-color">Bishu Das</span> World!</h2>
+            <h3>Build Climber,Train stopper</h3>
+            <p>
+                I don't know about myself. Actually it's something ,you know when you don't have a job and nothing to do ,and your lonliness kill you inside...Actually,i have a lot of friends but no one actually exit in my world</p>
+                <a class="link-button"target ="_blank" href="https://www.youtube.com/">hire me</a>
+        </div>
+        <div class="half-width">
+            <img src="myself.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
